--- a/3B-WEB/card-services-card-game-select.html
+++ b/3B-WEB/card-services-card-game-select.html
@@ -276,32 +276,60 @@
 			<div class="col-md-10 content-centered">
 				<!-- BEGIN CARD SERVICES -->
 				<div class="card-services">
-					<div class="row">
-						<div class="col-md-4">
-							<div class="item">
-								<a href="card-services-mobile-code.html">
-									<img src="assets/images/svg/hand-graving.svg">
-									<span>Nạp thẻ điện thoại</span>
-								</a>
+
+					<div class="body">
+						<div class="row">
+							
+							<div class="col-md-4">
+								<ul class="list-card">
+									<li>
+										<div class="ava">
+											<img class="object-fit" src="assets/images/garena.png">
+										</div>
+										<span class="name">Garena</span>
+									</li>
+								</ul>
+
+								<div class="form-group text-left">
+									<label>ID account</label>
+									<input type="text" class="form-control input-lg" placeholder="ID Account">
+								</div>
 							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="item">
-								<a href="card-services-electric.html">
-									<img src="assets/images/svg/plug.svg">
-									<span>Thanh toán tiền điện</span>
-								</a>
+							<div class="col-md-8">
+								<h4>Select the card value</h4>
+								<ul class="list-card value">
+									<li class="active">
+										<span>20k</span>
+										<span>Giá 19.000</span>
+									</li>
+									<li>
+										<span>30k</span>
+										<span>Giá 29.000</span>
+									</li>
+									<li>
+										<span>50k</span>
+										<span>Giá 49.000</span>
+									</li>
+									<li>
+										<span>100k</span>
+										<span>Giá 99.000</span>
+									</li>
+									<li>
+										<span>200k</span>
+										<span>Giá 189.000</span>
+									</li>
+									<li>
+										<span>500k</span>
+										<span>Giá 449.000</span>
+									</li>
+								</ul>
+
+								<a href="card-services-card-game-select-payment.html" class="btn btn-danger">Check out</a>
 							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="item">
-								<a href="card-services-card-game.html">
-									<img src="assets/images/svg/card.svg">
-									<span>Nạp thẻ Game</span>
-								</a>
-							</div>
+							<div class="clearfix"></div>
 						</div>
 					</div>
+
 				</div>
 				<!-- END CARD SERVICES -->
 			</div>
