--- a/3B-WEB/card-services-card-game.html
+++ b/3B-WEB/card-services-card-game.html
@@ -276,32 +276,51 @@
 			<div class="col-md-10 content-centered">
 				<!-- BEGIN CARD SERVICES -->
 				<div class="card-services">
-					<div class="row">
-						<div class="col-md-4">
-							<div class="item">
-								<a href="card-services-mobile-code.html">
-									<img src="assets/images/svg/hand-graving.svg">
-									<span>Nạp thẻ điện thoại</span>
-								</a>
+
+					<div class="body">
+						<h4>Nạp thẻ game</h4>
+
+						<div class="row">
+							<div class="col-md-12">
+								<ul class="list-card">
+									<li>
+										<a href="card-services-card-game-select.html">
+											<div class="ava">
+												<img class="object-fit" src="assets/images/garena.png">
+											</div>
+											<span class="name">Garena</span>
+										</a>
+									</li>
+									<li>
+										<a href="card-services-card-game-select.html">
+											<div class="ava">
+												<img class="object-fit" src="assets/images/img30.jpg">
+											</div>
+											<span class="name">Liên minh huyền thoại</span>
+										</a>
+									</li>
+									<li>
+										<a href="card-services-card-game-select.html">
+											<div class="ava">
+												<img class="object-fit" src="assets/images/img29.jpg">
+											</div>
+											<span class="name">Blade & Soul</span>
+										</a>
+									</li>
+									<li>
+										<a href="card-services-card-game-select.html">
+											<div class="ava">
+												<img class="object-fit" src="assets/images/fifa.png">
+											</div>
+											<span class="name">FIFA Online 4</span>
+										</a>
+									</li>
+								</ul>
 							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="item">
-								<a href="card-services-electric.html">
-									<img src="assets/images/svg/plug.svg">
-									<span>Thanh toán tiền điện</span>
-								</a>
-							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="item">
-								<a href="card-services-card-game.html">
-									<img src="assets/images/svg/card.svg">
-									<span>Nạp thẻ Game</span>
-								</a>
-							</div>
+							<div class="clearfix"></div>
 						</div>
 					</div>
+
 				</div>
 				<!-- END CARD SERVICES -->
 			</div>
