--- a/3B-WEB/card-services-card-game-select-payment.html
+++ b/3B-WEB/card-services-card-game-select-payment.html
@@ -276,32 +276,52 @@
 			<div class="col-md-10 content-centered">
 				<!-- BEGIN CARD SERVICES -->
 				<div class="card-services">
-					<div class="row">
-						<div class="col-md-4">
-							<div class="item">
-								<a href="card-services-mobile-code.html">
-									<img src="assets/images/svg/hand-graving.svg">
-									<span>Nạp thẻ điện thoại</span>
-								</a>
+
+					<div class="body">
+						<h4>Nạp thẻ game</h4>
+
+						<div class="row">
+							<div class="col-md-5">
+								<div class="select-payment">
+									<h4>Select Payment</h4>
+									<ul class="items">
+										<li>
+											<a href="#" data-toggle="modal" data-target="#checkoutByBank">
+												<img src="assets/images/bank-atm.png">
+												<div class="info">
+													<h5>Thẻ ATM</h5>
+													<p>(internet banking)</p>
+												</div>
+												<div class="clearfix"></div>
+											</a>
+										</li>
+										<li>
+											<a href="#" data-toggle="modal" data-target="#checkoutByMomo">
+												<img src="assets/images/momo-wallet.png">
+												<div class="info">
+													<h5>Momo Wallet</h5>
+													<p>Số dư 1200000đ</p>
+												</div>
+												<div class="clearfix"></div>
+											</a>
+										</li>
+									</ul>
+								</div>
 							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="item">
-								<a href="card-services-electric.html">
-									<img src="assets/images/svg/plug.svg">
-									<span>Thanh toán tiền điện</span>
-								</a>
+							<div class="col-md-7">
+								<div class="payment-detail">
+									<p>Service <span class="pull-right"><b>Nạp GAME</b></span></p>
+									<p>ID Garena <span class="pull-right"><b>0GN 932 344 34 4</b></span></p>
+									<p>Thẻ game <span class="pull-right"><b>Garena</b></span></p>
+									<p>Mệnh giá <span class="pull-right"><b>20.000</b></span></p>
+									<p>Giá tiền <span class="pull-right"><b>19.000</b></span></p>
+									<p>Total <span class="pull-right txt-red"><b>19.000</b></span></p>
+								</div>
 							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="item">
-								<a href="card-services-card-game.html">
-									<img src="assets/images/svg/card.svg">
-									<span>Nạp thẻ Game</span>
-								</a>
-							</div>
+							<div class="clearfix"></div>
 						</div>
 					</div>
+
 				</div>
 				<!-- END CARD SERVICES -->
 			</div>
@@ -388,6 +408,93 @@
 		</div>
 	</footer>
 	<!-- /END FOOTER -->
+
+	<!-- BEGIN MODAL CHECKOUT BY MOMO -->
+	<div id="checkoutByMomo" class="modal" data-backdrop="static">
+		<div class="modal-dialog custom-modal large">
+			<div class="modal-content">
+				<span class="close" data-dismiss="modal"><img src="assets/images/svg/x-circle.svg"></span>
+
+				<div class="modal-head">
+					<h4>Momo - Mã QR Code</h4>
+				</div>
+
+				<div class="row qr-code">
+					<div class="col-md-5">
+						<img src="assets/images/qr-code.jpg">
+						<p>Thời gian quét mã QR thanh toán còn <span class="txt-red">245</span> giây</p>
+					</div>
+					<div class="col-md-7 text-left">
+						<h4>Thực hiện theo hướng dẫn sau để thanh toán</h4>
+						<p>Bước 1: Mở ứng dụng MoMo để thanh toán</p>
+						<p>Bước 2: Chọn "Thanh toán" và quét mã QR code tại hướng dẫn này</p>
+						<p>Bước 3: Hoàn thanh các bước thanh toán theo hướng dẫn</p>
+					</div>
+					<div class="clearfix"></div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- /END MODAL CHECKOUT BY MOMO -->
+
+	<!-- BEGIN MODAL CHECKOUT BY BANK -->
+	<div id="checkoutByBank" class="modal" data-backdrop="static">
+		<div class="modal-dialog custom-modal large">
+			<div class="modal-content">
+				<span class="close" data-dismiss="modal"><img src="assets/images/svg/x-circle.svg"></span>
+
+				<div class="modal-head">
+					<h4>Select Bank</h4>
+				</div>
+
+				<h4 class="text-left">All banks</h4>
+				<ul class="list-item">
+					<li>
+						<a href="card-services-card-game-payment.html">
+							<div class="body-item">
+								<img class="object-fit" src="assets/images/banks/vietcombank.png">
+								<div class="name">Vietcombank</div>
+							</div>
+						</a>
+					</li>
+					<li>
+						<a href="card-services-card-game-payment.html">
+							<div class="body-item">
+								<img class="object-fit" src="assets/images/banks/bidv.png">
+								<div class="name">BIDV</div>
+							</div>
+						</a>
+					</li>
+					<li>
+						<a href="card-services-card-game-payment.html">
+							<div class="body-item">
+								<img class="object-fit" src="assets/images/banks/mb.png">
+								<div class="name">MB</div>
+							</div>
+						</a>
+					</li>
+					<li>
+						<a href="card-services-card-game-payment.html">
+							<div class="body-item">
+								<img class="object-fit" src="assets/images/banks/msb.png">
+								<div class="name">MSB</div>
+							</div>
+						</a>
+					</li>
+					<li>
+						<a href="card-services-card-game-payment.html">
+							<div class="body-item">
+								<img class="object-fit" src="assets/images/banks/vietinbank.png">
+								<div class="name">VIetinbank</div>
+							</div>
+						</a>
+					</li>
+				</ul>
+
+			</div>
+		</div>
+	</div>
+	<!-- /END MODAL CHECKOUT BY BANK -->
 
 	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/js/bootstrap.min.js"></script>
