--- a/3B-NEW/buyer-order-waiting-payment.html
+++ b/3B-NEW/buyer-order-waiting-payment.html
@@ -180,8 +180,8 @@
 				<div class="buyer-order">
 					<div class="filter">
 						<ul>
-							<li><a href="buyer-order-waiting-payment.html">Waiting payment</a></li>
-							<li class="active"><a href="buyer-order-pairing.html">Pairing</a></li>
+							<li class="active"><a href="buyer-order-waiting-payment.html">Waiting payment</a></li>
+							<li><a href="buyer-order-pairing.html">Pairing</a></li>
 							<li><a href="buyer-order-waiting-confirm.html">Waiting confirm</a></li>
 							<li><a href="buyer-order-waiting-ship.html">Wait ship</a></li>
 							<li><a href="buyer-order-shipping.html">Shipping</a></li>
@@ -201,13 +201,9 @@
 							<!-- BEGIN HEAD -->
 							<div class="head">
 								<h3><img class="logo" src="assets/images/store-logo-sm.png">Shop name with long text</h3>
-								<div class="shop-info">
-									<div class="info"><span>Đã ghép: <span class="text-green">1</span></span> | <span>Còn thiếu: <span class="text-green">1</span></span></div>
-									<div class="time text-red">09:12:59</div>
-								</div>
 
 								<ul class="status">
-									<li class="pairing"><span>Pairing</span></li>
+									<li class="pairing"><span>Waiting accept</span></li>
 								</ul>
 							</div>
 							<!-- BEGIN BODY -->
@@ -220,7 +216,7 @@
 											<div class="p-info pull-left">
 												<div class="name margin-b3">Korean Style Coat - High Quality Product </div>
 												<div class="size-color margin-b3">Size : M <span class="sep">|</span> Color: Green</div>
-												<div class="method">Buy method: <span class="text-green">Group</span> <span class="sep">|</span> Status: <span class="text-green">Waiting grafted</span></div>
+												<div class="method">Buy method: <span class="text-green">Group</span></div>
 											</div>
 										</div>
 
@@ -238,15 +234,40 @@
 									</div>
 								</div>
 								<!-- /END PRODUCT ITEM -->
+
+								<!-- BEGIN PRODUCT ITEM -->
+								<div class="p-item">
+									<div class="row">
+										<div class="col-md-6">
+											<img class="pull-left p-image" src="assets/images/img28.png">
+											<div class="p-info pull-left">
+												<div class="name margin-b3">Korean Style Coat - High Quality Product </div>
+												<div class="size-color margin-b3">Size : M <span class="sep">|</span> Color: Green</div>
+												<div class="method">Buy method: <span class="text-green">Group</span></div>
+											</div>
+										</div>
+
+										<div class="col-md-6">
+
+											<div class="price pull-right">
+												<span>$146,99</span>
+												<span class="sale">$180,00</span>
+											</div>
+
+											<div class="p-quality pull-right">
+												<span>X1</span>
+											</div>
+											<div class="clearfix"></div>
+										</div>
+									</div>
+								</div>
+								<!-- /END PRODUCT ITEM -->
 							</div>
 
 							<div class="total-items">
 								<div class="row">
-									<div class="col-md-4">
-										<div class="total">Total items: <span>1</span></div>
-									</div>
-									<div class="col-md-4">
-										<div class="total">Order time: <span>23-09-2019  17: 30</span></div>
+									<div class="col-md-8">
+										<div class="total">Total items: <span>2</span></div>
 									</div>
 									<div class="col-md-4">
 										<div class="total pull-right">Total Price: <span class="text-red">$2345</span></div>
@@ -258,13 +279,10 @@
 							<!-- BEGIN FOOT -->
 							<div class="foot">
 								<div class="warning pull-left">
-									<img src="assets/images/svg/warning.svg" class="pull-left margin-r-5">
-									<p>If there is no suitable order to combine the order by 21-09-2019  17:00, the shipping method will automatically switch to Standard Delivery.</p>
+									<p class="text-red">Thanh toán trước 21-09-2019  17:00 bằng ví 3B</p><br>
+									<p class="text-red">Tổng thanh toán: <b>889.000 đ</b> (4 sản phẩm)</p>
 								</div>
-								<div class="pull-right">
-									<span>Grafting List: </span>
-									<a href="buyer-order-grafting-list.html" class="btn btn-danger">View detail</a>
-								</div>
+								<a href="buyer-order-waiting-payment-detail.html" class="btn btn-danger pull-right">Thanh toán ngay</a>
 								<div class="clearfix"></div>
 							</div>
 						</div>
@@ -275,13 +293,9 @@
 							<!-- BEGIN HEAD -->
 							<div class="head">
 								<h3><img class="logo" src="assets/images/store-logo-sm.png">Shop name with long text</h3>
-								<div class="shop-info">
-									<div class="info"><span>Đã ghép: <span class="text-green">1</span></span> | <span>Còn thiếu: <span class="text-green">1</span></span></div>
-									<div class="time text-red">09:12:59</div>
-								</div>
 
 								<ul class="status">
-									<li class="pairing"><span>Pairing</span></li>
+									<li class="pairing"><span>Waiting accept</span></li>
 								</ul>
 							</div>
 							<!-- BEGIN BODY -->
@@ -294,7 +308,7 @@
 											<div class="p-info pull-left">
 												<div class="name margin-b3">Korean Style Coat - High Quality Product </div>
 												<div class="size-color margin-b3">Size : M <span class="sep">|</span> Color: Green</div>
-												<div class="method">Buy method: <span class="text-green">Group</span> <span class="sep">|</span> Status: <span class="text-green">Waiting grafted</span></div>
+												<div class="method">Buy method: <span class="text-green">Group</span></div>
 											</div>
 										</div>
 
@@ -312,15 +326,40 @@
 									</div>
 								</div>
 								<!-- /END PRODUCT ITEM -->
+
+								<!-- BEGIN PRODUCT ITEM -->
+								<div class="p-item">
+									<div class="row">
+										<div class="col-md-6">
+											<img class="pull-left p-image" src="assets/images/img28.png">
+											<div class="p-info pull-left">
+												<div class="name margin-b3">Korean Style Coat - High Quality Product </div>
+												<div class="size-color margin-b3">Size : M <span class="sep">|</span> Color: Green</div>
+												<div class="method">Buy method: <span class="text-green">Group</span></div>
+											</div>
+										</div>
+
+										<div class="col-md-6">
+
+											<div class="price pull-right">
+												<span>$146,99</span>
+												<span class="sale">$180,00</span>
+											</div>
+
+											<div class="p-quality pull-right">
+												<span>X1</span>
+											</div>
+											<div class="clearfix"></div>
+										</div>
+									</div>
+								</div>
+								<!-- /END PRODUCT ITEM -->
 							</div>
 
 							<div class="total-items">
 								<div class="row">
-									<div class="col-md-4">
-										<div class="total">Total items: <span>1</span></div>
-									</div>
-									<div class="col-md-4">
-										<div class="total">Order time: <span>23-09-2019  17: 30</span></div>
+									<div class="col-md-8">
+										<div class="total">Total items: <span>2</span></div>
 									</div>
 									<div class="col-md-4">
 										<div class="total pull-right">Total Price: <span class="text-red">$2345</span></div>
@@ -332,13 +371,10 @@
 							<!-- BEGIN FOOT -->
 							<div class="foot">
 								<div class="warning pull-left">
-									<img src="assets/images/svg/warning.svg" class="pull-left margin-r-5">
-									<p>If there is no suitable order to combine the order by 21-09-2019  17:00, the shipping method will automatically switch to Standard Delivery.</p>
+									<p class="text-red">Thanh toán trước 21-09-2019  17:00 bằng ví 3B</p><br>
+									<p class="text-red">Tổng thanh toán: <b>889.000 đ</b> (4 sản phẩm)</p>
 								</div>
-								<div class="pull-right">
-									<span>Grafting List: </span>
-									<a href="buyer-order-grafting-list.html" class="btn btn-danger">View detail</a>
-								</div>
+								<a href="buyer-order-waiting-payment-detail.html" class="btn btn-danger pull-right">Thanh toán ngay</a>
 								<div class="clearfix"></div>
 							</div>
 						</div>
