--- a/3B-NEW/index.html
+++ b/3B-NEW/index.html
@@ -302,6 +302,8 @@
 					<ul>
 						<li><a href="buyer-3b-coin.html">Buyer 3B Coin</a></li>
 						<li><a href="buyer-voucher.html">Buyer Voucher</a></li>
+						<li><a href="buyer-order-waiting-payment.html">Buyer Order Waiting Payment</a></li>
+						<li><a href="buyer-order-waiting-payment-detail.html">Buyer Order Waiting Payment Detail</a></li>
 					</ul>
 				</div>
 			</div>
