3B - WEB - add flash-sale

--- a/3B-WEB/index.html
+++ b/3B-WEB/index.html
@@ -75,6 +75,13 @@
 						<li><a href="card-services.html">Card & Services</a></li>
 					</ul>
 				</div>
+				<div class="col-md-6">
+					<h5>FLASH SALE - Phase 6</h5>
+					<ul>
+						<li><a href="flash-sale.html">Flash Sale</a></li>
+						<li><a href="flash-sale-upcoming.html">Flash Sale Upcoming</a></li>
+					</ul>
+				</div>
 			</div>
 		</div>
 	</div>
