3B - small update css on admin-return-detail - phase 4

--- a/3B-NEW/admin-return-detail.html
+++ b/3B-NEW/admin-return-detail.html
@@ -410,15 +410,20 @@
 							<div class="row">
 								<div class="col-md-8">
 									<div class="return-p">
-										<img src="assets/images/svg/image-temp.svg">
+										<img src="assets/images/svg/image-temp.svg" class="object-fit pull-left">
 										<h4>Giầy thể thao</h4>
+										<div class="clearfix"></div>
 									</div>
 									<div class="return-u">
-										<p>Được yêu cầu bởi:</p>
+										<p class="pull-left">Được yêu cầu bởi:</p>
 										<div class="u-info">
-											<img class="iconava pull-left" src="assets/images/svg/image-temp.svg">
-											<div class="clearfix"></div>
+											<img class="iconava pull-left object-fit" src="assets/images/svg/image-temp.svg">
 											<h4>Nguyễn Văn A</h4>
+											<div class="clearfix"></div>
+										</div>
+										<div class="clearfix"></div>
+										<div class="return-t">
+											<p>Thời gian yêu cầu: <span>12:30:00 23/07/2020</span></p>
 										</div>
 										<div class="details">
 											<p>Lý do trả hàng: <span class="text-red">Hàng không đúng mô tả</span></p>
