--- a/3B-NEW/admin-return.html
+++ b/3B-NEW/admin-return.html
@@ -429,20 +429,29 @@
 								<table class="table table-hover">
 									<thead>
 										<tr>
-											<th></th>
-											<th>Sản phẩm</th>
-											<th>Người yêu cầu</th>
-											<th>Thời gian</th>
+											<th class="text-center">Đơn hàng</th>
+											<th class="text-center">Người yêu cầu</th>
 											<th>Lý do</th>
+											<th>Thời gian</th>
 											<th>Trạng thái</th>
 											<th class="action">Chi tiết</th>
 										</tr>
 									</thead>
 									<tbody>
 										<tr>
-											<td><img class="icons-svg small" src="assets/images/svg/image-temp.svg"></td>
-											<td>Thông hơi Quảng Châu siêu mát cho bé trai và gái</td>
-											<td><img class="iconava" src="assets/images/svg/image-temp.svg">Nguyễn Văn A</td>
+											<td>
+												<div class="name-store">
+													<img src="assets/images/img3.jpg" class="object-fit pull-left">
+													<h4>Store name with long long long long text</h4>
+													<div class="clearfix"></div>
+												</div>
+												<div class="p-order">
+													<img class="pull-left object-fit" src="assets/images/img2.jpg">
+													<h4>Thông hơi Quảng Châu siêu mát cho bé trai và gái</h4>
+													<div class="clearfix"></div>
+												</div>
+											</td>
+											<td><center><img class="iconava" src="assets/images/svg/image-temp.svg">Nguyễn Văn A</center></td>
 											<td>Thời trang nữ</td>
 											<td>16:30 01/01/2019</td>
 											<td>Chưa duyệt</td>
@@ -451,9 +460,19 @@
 											</td>
 										</tr>
 										<tr>
-											<td><img class="icons-svg small" src="assets/images/svg/image-temp.svg"></td>
-											<td>Thông hơi Quảng Châu siêu mát cho bé trai và gái</td>
-											<td><img class="iconava" src="assets/images/svg/image-temp.svg">Nguyễn Văn A</td>
+											<td>
+												<div class="name-store">
+													<img src="assets/images/img3.jpg" class="object-fit pull-left">
+													<h4>Store name with long long long long text</h4>
+													<div class="clearfix"></div>
+												</div>
+												<div class="p-order">
+													<img class="pull-left object-fit" src="assets/images/img2.jpg">
+													<h4>Thông hơi Quảng Châu siêu mát cho bé trai và gái</h4>
+													<div class="clearfix"></div>
+												</div>
+											</td>
+											<td><center><img class="iconava" src="assets/images/svg/image-temp.svg">Nguyễn Văn A</center></td>
 											<td>Thời trang nữ</td>
 											<td>16:30 01/01/2019</td>
 											<td>Chưa duyệt</td>
@@ -462,9 +481,19 @@
 											</td>
 										</tr>
 										<tr>
-											<td><img class="icons-svg small" src="assets/images/svg/image-temp.svg"></td>
-											<td>Thông hơi Quảng Châu siêu mát cho bé trai và gái</td>
-											<td><img class="iconava" src="assets/images/svg/image-temp.svg">Nguyễn Văn A</td>
+											<td>
+												<div class="name-store">
+													<img src="assets/images/img3.jpg" class="object-fit pull-left">
+													<h4>Store name with long long long long text</h4>
+													<div class="clearfix"></div>
+												</div>
+												<div class="p-order">
+													<img class="pull-left object-fit" src="assets/images/img2.jpg">
+													<h4>Thông hơi Quảng Châu siêu mát cho bé trai và gái</h4>
+													<div class="clearfix"></div>
+												</div>
+											</td>
+											<td><center><img class="iconava" src="assets/images/svg/image-temp.svg">Nguyễn Văn A</center></td>
 											<td>Thời trang nữ</td>
 											<td>16:30 01/01/2019</td>
 											<td>Chưa duyệt</td>
@@ -472,7 +501,6 @@
 												<a href="admin-return-detail.html">Chi tiết</a>
 											</td>
 										</tr>
-
 									</tbody>
 								</table>
 							</div>
