3B - small change style table withdraw

--- a/3B-NEW/admin-withdraw.html
+++ b/3B-NEW/admin-withdraw.html
@@ -420,20 +420,20 @@
 								<div class="clearfix"></div>
 							</div>
 
-							<div class="table-responsive">
+							<div class="table-responsive withdraw">
 								<table class="table table-hover">
 									<thead>
 										<tr>
-											<th>Mã yêu cầu</th>
-											<th>Người yêu cầu</th>
-											<th>Số tiền yêu cầu</th>
-											<th>Phí rút</th>
-											<th>Ngân hàng nhận số tiền</th>
-											<th>Số dư trong ví (Số tiền tối đa được rút)</th>
-											<th>Ngày giờ yêu cầu</th>
-											<th>Ngày giờ duyệt</th>
-											<th>Ngày giờ hủy</th>
-											<th>Ngày giờ chuyển khoản thành công</th>
+											<th style="">Mã yêu cầu</th>
+											<th style="">Người yêu cầu</th>
+											<th style="">Số tiền yêu cầu</th>
+											<th style="">Phí rút</th>
+											<th style="">Ngân hàng<br>nhận số tiền</th>
+											<th style="">Số dư trong ví<br>(Số tiền tối đa được rút)</th>
+											<th style="">Ngày giờ yêu cầu</th>
+											<th style="">Ngày giờ duyệt</th>
+											<th style="">Ngày giờ hủy</th>
+											<th style="">Ngày giờ chuyển khoản<br>thành công</th>
 											<th>Trạng thái</th>
 											<th class="action">Hoạt động</th>
 										</tr>
